--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ mako==1.3.6
     # via alembic
 markupsafe==3.0.2
     # via mako
+psycopg2-binary==2.9.10
+    # via -r requirements.in
 python-dotenv==1.0.1
     # via -r requirements.in
 sqlalchemy==2.0.36
@@ -30,6 +32,7 @@ tortoise==0.1.1
     # via -r requirements.in
 typing-extensions==4.12.2
     # via
+    #   -r requirements.in
     #   alembic
     #   sqlalchemy
 tzdata==2024.2
